--- a/analysis.org
+++ b/analysis.org
@@ -30,7 +30,6 @@
    | Lancashire          | LAN |
    | Leicestershire      | LEI |
    | Lincolnshire        | LIN |
-   | Unknown             | UNK |
    | Norfolk             | NFK |
    | North East          | NEA |
    | North Pembrokeshire | NPE |
@@ -179,86 +178,86 @@
   nwtccc2 <- nrow(indivs.d)
   stopifnot(nwtccc2 == 8267)
 #+end_src
-** Sample sizes
-   :PROPERTIES:
-   :results: value replace
-   :END:
+* Sample sizes
+  :PROPERTIES:
+  :results: value replace
+  :END:
 
 
-   #+source: sample-sizes
-   #+begin_src R
-   table(indivs.d$reg2)
-   #+end_src
+  #+source: sample-sizes
+  #+begin_src R
+  table(indivs.d$reg2)
+  #+end_src
 
-   #+results: sample-sizes
-   | Belgium |  544 |
-   | Denmark |  332 |
-   | France  |  479 |
-   | Germany | 1100 |
-   | Ireland |   61 |
-   | Italy   |  745 |
-   | Norway  |  953 |
-   | Poland  |   58 |
-   | Spain   |  205 |
-   | Sweden  | 1212 |
-   | UK      | 2578 |
+  #+results: sample-sizes
+  | Belgium |  544 |
+  | Denmark |  332 |
+  | France  |  479 |
+  | Germany | 1100 |
+  | Ireland |   61 |
+  | Italy   |  745 |
+  | Norway  |  953 |
+  | Poland  |   58 |
+  | Spain   |  205 |
+  | Sweden  | 1212 |
+  | UK      | 2578 |
 
-   #+begin_src R :var x=sample-sizes[,1]
-     sum(x)
-   #+end_src
+  #+begin_src R :var x=sample-sizes[,1]
+    sum(x)
+  #+end_src
 
-   #+results:
-   : 8267
+  #+results:
+  : 8267
 
 
-   #+source: sample-sizes-1
-   #+begin_src R
-   table(indivs.d$reg)
-   #+end_src
+  #+source: sample-sizes-1
+  #+begin_src R
+  table(indivs.d$reg)
+  #+end_src
 
-   #+results: sample-sizes-1
-   | Argyll and Bute     |   49 |
-   | Banff and Buchan    |   64 |
-   | Cheshire            |   52 |
-   | Cornwall            |  104 |
-   | Cumbria             |  259 |
-   | Derbyshire          |   11 |
-   | Devon               |   90 |
-   | Dorset              |   45 |
-   | Forest of Dean      |   48 |
-   | Gloucestershire     |   47 |
-   | Hampshire           |   50 |
-   | Herefordshire       |   31 |
-   | Kent                |   74 |
-   | Lancashire          |   45 |
-   | Leicestershire      |   88 |
-   | Lincolnshire        |  151 |
-   | Norfolk             |  119 |
-   | North East          |  227 |
-   | North Pembrokeshire |   56 |
-   | North Wales         |   87 |
-   | Northamptonshire    |   47 |
-   | Northern Ireland    |   62 |
-   | Nottinghamshire     |   80 |
-   | Orkney              |  101 |
-   | Oxfordshire         |  122 |
-   | South Pembrokeshire |   14 |
-   | Suffolk             |  105 |
-   | Sussex              |   81 |
-   | Worcestershire      |   42 |
-   | Yorkshire           |  227 |
-   | Belgium             |  544 |
-   | Denmark             |  332 |
-   | France              |  479 |
-   | Germany             | 1100 |
-   | Ireland             |   61 |
-   | Italy               |  745 |
-   | Norway              |  953 |
-   | Poland              |   58 |
-   | Spain               |  205 |
-   | Sweden              | 1212 |
+  #+results: sample-sizes-1
+  | Argyll and Bute     |   49 |
+  | Banff and Buchan    |   64 |
+  | Cheshire            |   52 |
+  | Cornwall            |  104 |
+  | Cumbria             |  259 |
+  | Derbyshire          |   11 |
+  | Devon               |   90 |
+  | Dorset              |   45 |
+  | Forest of Dean      |   48 |
+  | Gloucestershire     |   47 |
+  | Hampshire           |   50 |
+  | Herefordshire       |   31 |
+  | Kent                |   74 |
+  | Lancashire          |   45 |
+  | Leicestershire      |   88 |
+  | Lincolnshire        |  151 |
+  | Norfolk             |  119 |
+  | North East          |  227 |
+  | North Pembrokeshire |   56 |
+  | North Wales         |   87 |
+  | Northamptonshire    |   47 |
+  | Northern Ireland    |   62 |
+  | Nottinghamshire     |   80 |
+  | Orkney              |  101 |
+  | Oxfordshire         |  122 |
+  | South Pembrokeshire |   14 |
+  | Suffolk             |  105 |
+  | Sussex              |   81 |
+  | Worcestershire      |   42 |
+  | Yorkshire           |  227 |
+  | Belgium             |  544 |
+  | Denmark             |  332 |
+  | France              |  479 |
+  | Germany             | 1100 |
+  | Ireland             |   61 |
+  | Italy               |  745 |
+  | Norway              |  953 |
+  | Poland              |   58 |
+  | Spain               |  205 |
+  | Sweden              | 1212 |
 
-*** Old (wrong) sample sizes
+** Old (wrong) sample sizes
    #+tblname: old-sample-sizes-1
    | Argyll and Bute     |   45 |
    | Banff and Buchan    |   67 |
@@ -711,10 +710,49 @@ wc -l *.ids
 |  2636 | 22-POBIx.ids |
 |  7924 | 22-allx.ids  |
 | 15848 | total        |
+* PCA
+#+begin_src sh
+  cd data/POBI+MS
+  python ~/src/wtccc2/wtccc2-analyse/wtccc2-analyse.py \
+      --pca --platform illumina \
+      --cohorts 'MS POBI' --exclude ../MS/exclusions.all \
+      --outfile MS-POBI-pca-
+#+end_src
 
-* DONE Prepare data set for phasing
-** Environment
-*** Create links to HapMap data files
+* Paper
+** Abstract
+The post-glacial history of human occupation of the British Isles has
+received a lot of attention from archeologists and historians during
+the last 250 years, and from geneticists during the last three
+decades. Here we address some of the key questions in this literature
+using genome-wide genetic variation data. Mixture modeling and
+principal component analyses recover genome-wide geographic clines
+that are consistent with continental patterns and thus consistent with
+a null model of isolation by distance.
+
+** Introduction
+** Results
+*** Genotype-based
+**** Allele frequency differentiation
+***** Candidate SNPs
+**** Proxy-population admixture analyses
+#+begin_src emacs-lisp
+(org-babel-lob-ingest "lib/psi.org")
+#+end_src
+
+#+lob: admixmcmc
+
+**** Unsupervised clustering/ordination
+***** PCA: congruence of genetic and geographic maps
+[[file:pobi-pca-scatter-zoom.png]]
+***** Structure
+***** SFA
+**** IBD sharing HMM
+     How many between-region relatives?
+*** Haplotype-based
+**** DONE Prepare data set for phasing
+***** Environment
+****** Create links to HapMap data files
 #+begin_src sh
   cd data/HM3
   for i in `seq 1 22` ; do
@@ -730,7 +768,7 @@ wc -l *.ids
           `printf "%02d" $i`.map
   done
 #+end_src
-*** R data frames
+****** R data frames
 #+source: set-up-data-frames
 #+begin_src R
   dd <- list()
@@ -747,15 +785,15 @@ wc -l *.ids
   df$winh <- mapply(function(h, w) sum(w$rs %in% h$rs), dd$h, dd$w, SIMPLIFY=FALSE)
 #+end_src
 
-** DONE Restrict to intersection
+***** DONE Restrict to intersection
 We're going to flip WTCCC2 to match HapMap3
-*** Create merged SNP lists
+****** Create merged SNP lists
 #+source: create-isect
 #+begin_src R
   isect <- mapply(merge, dd$w, dd$h, MoreArgs=list(by="rs"), SIMPLIFY=FALSE)
   isect <- lapply(isect, function(i) i[order(i$pos.x),])
 #+end_src
-*** Create restricted data files
+****** Create restricted data files
 #+source: create-restricted-files
 #+begin_src R
   for(c in chroms) {
@@ -793,7 +831,7 @@ We're going to flip WTCCC2 to match HapMap3
   }
 #+end_src
 
-*** Make pos file
+****** Make pos file
 #+begin_src R
   make.pos.files <- function() {
       dir.create("pos")
@@ -805,7 +843,7 @@ We're going to flip WTCCC2 to match HapMap3
   make.pos.files()
 #+end_src
 
-** DONE Check restricted data dimensions
+***** DONE Check restricted data dimensions
 
 #+begin_src sh :colnames yes
   printf "chr\thapmap-L\twtccc2-L\thapmap-n\twtccc2-n\n"
@@ -846,8 +884,8 @@ We're going to flip WTCCC2 to match HapMap3
 |  21 |     7475 |     7475 |      410 |     8267 |
 |  22 |     7635 |     7635 |      410 |     8267 |
 
-** Flip the WTCCC2 genotypes to match HapMap3 strand
-*** Construct flip indicator files
+***** Flip the WTCCC2 genotypes to match HapMap3 strand
+****** Construct flip indicator files
 #+source: create-flip-indicator-files
 #+begin_src R
   flipind <- function(df, file) {
@@ -864,7 +902,7 @@ We're going to flip WTCCC2 to match HapMap3
           cat(flipind(isect[[c]], flipinputfile(c, d)), file=flipindfile(c, d), sep="\n")
       }
 #+end_src
-*** Flip WTCCC2 PoBI+MS
+****** Flip WTCCC2 PoBI+MS
 #+source: create-flipped-files
 #+begin_src R
   for(c in rev(chroms)) {
@@ -883,7 +921,7 @@ We're going to flip WTCCC2 to match HapMap3
   }
 #+end_src
 
-*** Create strand indicators
+****** Create strand indicators
 #+source: create-strand-indicators
 #+begin_src R
   for(c in chroms) {
@@ -900,8 +938,8 @@ We're going to flip WTCCC2 to match HapMap3
   }
 #+end_src
 
-** DONE Check flipped data dimensions
-*** DONE Flip indicators
+***** DONE Check flipped data dimensions
+****** DONE Flip indicators
 #+begin_src sh
   wc -l flipind/*
 #+end_src
@@ -931,7 +969,7 @@ We're going to flip WTCCC2 to match HapMap3
 |   7635 | flipind/w-22.flip |
 | 498125 | total             |
 
-*** DONE Flipped data
+****** DONE Flipped data
 #+begin_src sh :colnames yes
   printf "chr\thapmap-L\twtccc2-L\thapmap-n\twtccc2-n\n"
   for i in `seq -w 1 22` ; do
@@ -997,7 +1035,7 @@ Was:
 |  21 |     7475 |     7475 |      410 |     8267 |
 |  22 |     7635 |     7635 |      410 |     8267 |
 
-** DONE Check allele frequencies
+***** DONE Check allele frequencies
 #+begin_src R
   freq <- lapply(chroms, list)
   for(c in rev(chroms)) {
@@ -1038,7 +1076,7 @@ Functions to compute frequency of allele 0
                                  i, i, rdatafile(c, "h"))),
                     quiet=TRUE, what=integer()))
 #+end_src
-** Check
+***** Check
 #+tblname: rsids
 | SNP       |
 |-----------|
@@ -1112,7 +1150,7 @@ Functions to compute frequency of allele 0
 | rs#       | chrom |      pos | strand | build    | ref_allele | ref-allele_freq | ref-allele_count | other_allele | other-freq | other-allele_count |
 | rs2236639 | chr22 | 15452483 | +      | ncbi_b36 | A          |           0.084 |               19 | G            |      0.916 |                207 |
 
-** SNP QC
+***** SNP QC
 #+begin_src sh
   qctool -g w-#.gen \
       -write-snp-excl-list \
@@ -1123,7 +1161,7 @@ Functions to compute frequency of allele 0
 
 #+end_src
 
-** Babel script
+***** Babel script
 #+begin_src R :noweb yes
   <<set-variables()>>
   <<set-up-data-frames()>>
@@ -1136,9 +1174,9 @@ Functions to compute frequency of allele 0
 #+results:
 : 0
 
-* TODO What's going on with chromosome 1 ??
-* STARTED Phasing
-** Sample files and per-population exclude files
+**** TODO What's going on with chromosome 1 ??
+**** STARTED Phasing
+***** Sample files and per-population exclude files
 #+begin_src R
   wtccc2.write.samplefile(indivs.d, file=indivsamplefile("w"))
   for(pop in levels(indivs.d$reg2)) {
@@ -1147,7 +1185,7 @@ Functions to compute frequency of allele 0
   }
   cat("", file=indivexcludefile("All", "w"))
 #+end_src
-** Write per-population per-chunk scripts
+***** Write per-population per-chunk scripts
 #+begin_src R :results output :results replace
   for(pop in c(levels(indivs.d$reg2), "All")) {
       cat("\n", pop, "\n")
@@ -1491,31 +1529,31 @@ Functions to compute frequency of allele 0
 There were 50 or more warnings (use warnings() to see the first 50)
 #+end_example
 
-*** Shell version
-    -strand_g frdata/w-$c.gen.strand \
+****** Shell version
+       -strand_g frdata/w-$c.gen.strand \
 
-    -fix_strand_g \
+       -fix_strand_g \
 
-    #+begin_src sh
-      mkdir -p impute2/cmds impute2/out
+       #+begin_src sh
+       	 mkdir -p impute2/cmds impute2/out
 
-      for c in `seq -w 1 21` ; do
-          echo \
-              impute2 \
-              -phase \
-              -m rmap/h-$c.map \
-              -h frdata/h-$c.hap \
-              -l rlegend/h-$c.legend \
-              -g frdata/w-$c.gen \
-              -strand_g rstrand/$c \
-              -int 20e6 24e6 \
-              -Ne 11418 \
-              -o impute2/out/$c \
-            > impute2/cmds/$c.sh
-      done
-    #+end_src
-** Test phasing
-*** DONE Run twice on same input
+       	 for c in `seq -w 1 21` ; do
+             echo \
+               	 impute2 \
+               	 -phase \
+               	 -m rmap/h-$c.map \
+               	 -h frdata/h-$c.hap \
+               	 -l rlegend/h-$c.legend \
+               	 -g frdata/w-$c.gen \
+               	 -strand_g rstrand/$c \
+               	 -int 20e6 24e6 \
+               	 -Ne 11418 \
+               	 -o impute2/out/$c \
+               > impute2/cmds/$c.sh
+       	 done
+       #+end_src
+***** Test phasing
+****** DONE Run twice on same input
 #+begin_src sh
 for i in 1 2 ; do
   impute2 -phase \
@@ -1536,7 +1574,7 @@ done
       # -burnin 0 \
       # -iter 1 \
 #+end_src
-**** Check haplotypes
+******* Check haplotypes
 #+begin_src R :var hfile1="impute2-test/1_haps" :var hfile2="impute2-test/2_haps" :var chrom=22 :var reg="Poland" :var int0=29284399 :var int1=33284399 :results output replace
   date()
   ids.pop <- indivs.d$ID_1[indivs.d$reg2 == reg]
@@ -1572,8 +1610,8 @@ null device
           1
 #+end_example
 
-*** DONE Poland chr22
-**** Check duplicate runs
+****** DONE Poland chr22
+******* Check duplicate runs
 #+begin_src R :var hfile1="impute2-test/out-1/006_haps" :var hfile2="impute2-test/out-2/006_haps" :var chrom=22 :var reg="Poland" :var int0=32779778 :var int1=36779340 :results output replace
   date()
   ids.pop <- indivs.d$ID_1[indivs.d$reg2 == reg]
@@ -1608,9 +1646,9 @@ closing unused connection 5 (cut -d ' ' -f 6- < impute2-test/2_haps)
 null device
           1
 #+end_example
-*** Validate phasing
-**** Allele frequencies should be the same!
-**** Distribution of identical stretch lengths
+****** Validate phasing
+******* Allele frequencies should be the same!
+******* Distribution of identical stretch lengths
 #+begin_src R
   identical.stretch.lengths <- function(hap1, hap2) {
       r <- rle(hap1 == hap2)
@@ -1619,7 +1657,7 @@ null device
 
 #+end_src
 
-***** Compare Orkney vs Norway and Spain vs Norway
+******** Compare Orkney vs Norway and Spain vs Norway
 #+begin_src R :var chrom=22 :var nmax=99999
   indivs.d <- pobi.ms.read.samplefile()
   ids <- scan(indivfile("w"), what="")
@@ -1645,7 +1683,7 @@ null device
 #+end_src
 
 #+results:
-*** Check overlaps
+****** Check overlaps
 #+begin_src R :results value replace
 p <- lapply(chroms, function(c) scan(posfile(c, "w"), quiet=TRUE))
 i <- lapply(p, function(pos) make.intervals(length(pos), width=chunk*snpdensity, overlap=noverlap))
@@ -1656,7 +1694,7 @@ unique(unlist(o))
 #+results:
 : 199
 
-** Stitch haplotypes
+***** Stitch haplotypes
 #+begin_src R :var pops=sample-sizes[,0]
   chrom.nchunks <- c("18"=28, "20"=24) ##, "22"=14)
   pops <- as.character(pops)
@@ -1673,7 +1711,71 @@ unique(unlist(o))
 
 #+end_src
 
-* STARTED Create Garrett input files
+**** Copying HMM
+     Use Affy data for individuals from the Iberian and "northern
+     German" areas of the POPRES map, and from Kiel.
+
+     - fit HMM to one UK individual at a time
+     - fit to unphased data?
+***** STARTED Copying Analysis
+****** Explanatory email from Garrett
+From: Garrett Hellenthal <ghellenthal@gmail.com>
+Subject: Re: UK-Europe haplotypes
+Date: Thu, 30 Sep 2010 13:34:17 +0100
+To: Dan Davison <davison@stats.ox.ac.uk>
+
+Hi Dan -
+
+Maybe you can take a preliminary look at the results for chrom 22, as
+they're finished? All of these results are based on doing 10 E-M runs to
+estimate N_e. (Typically we then average this across chromos and re-run with
+fixed N_e to get final proportions and samples.)
+
+For the donors, I've estimated proportions for which they copy from each
+other (and themselves) using a "leave-one-out" approach, where, e.g., a SWE
+ind copies with equal a-priori prob from any of the 49 inds from each of the
+other donor pops plus the other 49 inds of their own pop. (We leave-one-out
+so that every donor ind copies from the exact same number of inds from every
+donor pop including itself.)
+
+For the recipients, I've estimated proportions from which they copy from the
+donors (using 50 inds/donor-pop), as well as generated 10 samples from the
+PAC model for each haplotype. Note these are all "raw" proportions, based
+directly on the PAC model output.
+
+The files for the donors are at
+"/data/oak/user/hellenth/POBIdan/ChromoPainterOUTPUT/LeaveOneOutNeResults/"
+The files for the recipients are at
+"/data/oak/user/hellenth/POBIdan/ChromoPainterOUTPUT/PaintingSamples/"
+
+Most of the output is described in the brief write-up I gave you; I think
+you'll be mostly interested in the ".chunkcounts.out" files and the
+".samples.out" files for now. If you divide each row of ".chunkcounts.out"
+by its sum, this gives you the estimated proportion of copying from each
+donor. The ".samples.out" files give, for each recipient haplotype, 10
+samples from the PAC model. Each row under a haplotype header is a sample
+for that recipient hap (as ordered in the files you gave me). The first
+column gives the sample number (1...10) and each subsequent column gives the
+sampled donor haplotype at each snp. Donor haplotypes are labeled as ordered
+in the phase-style input files. For all files, labels "1"-"100" are BEL,
+"101"-"200" are DEN, "201"-"300" are FRA, etc...
+
+Another thing you may need is in
+"/data/oak/user/hellenth/POBIdan/ChromoPainterOUTPUT/" -- the ".recomrates"
+files give the positions corresponding to the locations in the "samples.out"
+files (this is different than the whole chromo 22 recom-rates file you gave
+me, as I first remove monomorphic snps, which may differ per each pop
+analyzed).
+
+Let me know if you have permission troubles as well, etc.
+Garrett
+
+****** Questions
+******* Should I be using *.regionchunkcounts.out for copying proportions?
+******* What's the num.regions column in *.regionchunkcounts.out?
+******* No difference between pops in *prop.out files
+******* Why self lower than others in *prop.out files?
+****** STARTED Create Garrett input files
 #+begin_src R :var codes.d=region-codes :results output replace
   ndonors <- 50
   chroms <- c("18","20", "22")
@@ -1695,21 +1797,21 @@ unique(unlist(o))
   indiv2hap.idx <- function(idx) c(rbind(2*idx - 1, 2*idx))
 
   write.garrett.haplotype.and.id.files <- function(haps, ids, pos, chrom, pop, perm) {
-      stopifnot(ncol(haps) == 2*length(ids))
-      stopifnot(nrow(haps) == length(pos))
-      hap.perm <- indiv2hap.idx(perm)
-      haps <- haps[,hap.perm]
+      ## stopifnot(ncol(haps) == 2*length(ids))
+      ## stopifnot(nrow(haps) == length(pos))
+      ## hap.perm <- indiv2hap.idx(perm)
+      ## haps <- haps[,hap.perm]
       ids <- ids[perm]
       ## num.inds
       ## num.snps
       ## P positions.vector
       ## SSSSSSSS (repeated num.snps times, though really you can have anything here)
-      hapfile <- g.hapfile(pop, chrom)
-      cat(length(ids), "\n", file=hapfile)
-      cat(nrow(haps), "\n", file=hapfile, append=TRUE)
-      cat("P", pos, sep=" ", file=hapfile, append=TRUE) ; cat("\n", file=hapfile, append=TRUE)
-      cat(rep("S", nrow(haps)), "\n", sep="", file=hapfile, append=TRUE)
-      cat(rbind(haps, rep("\n", ncol(haps))), sep="", file=hapfile, append=TRUE)
+      ## hapfile <- g.hapfile(pop, chrom)
+      ## cat(length(ids), "\n", file=hapfile)
+      ## cat(nrow(haps), "\n", file=hapfile, append=TRUE)
+      ## cat("P", pos, sep=" ", file=hapfile, append=TRUE) ; cat("\n", file=hapfile, append=TRUE)
+      ## cat(rep("S", nrow(haps)), "\n", sep="", file=hapfile, append=TRUE)
+      ## cat(rbind(haps, rep("\n", ncol(haps))), sep="", file=hapfile, append=TRUE)
       if(!file.exists(g.idfile(pop)))
           cat(ids, sep="\n", file=g.idfile(pop))
       else
@@ -1730,10 +1832,10 @@ unique(unlist(o))
           write.garrett.recomb.file(c, leg0)
       for(pop in pops) {
           ids <- indivs.d$ID_1[indivs.d$reg2 == pop]
-          hen <- stitchedfile(c, pop)
+          ## hen <- stitchedfile(c, pop)
           leg <- read.chiamo.legend(hen)
           ## stopifnot(identical(leg, leg0)) ## ??
-          haps <- read.haplotypes(hen, ids)
+          haps <- NULL ## read.haplotypes(hen, ids)
           if(pop != "UK")
               write.garrett.haplotype.and.id.files(haps, ids, pos=leg$pos,
                                                    chrom=c, pop=popcodes[pop], perm=perms[[popcodes[pop]]])
@@ -1741,7 +1843,7 @@ unique(unlist(o))
               for(UKreg in UKregions) {
                   inUK <- indivs.d$reg2 == "UK"
                   inreg <- indivs.d[inUK,"reg"] == UKreg
-                  haps.reg <- haps[,rep(inreg, each=2),drop=FALSE]
+                  haps.reg <- NULL ## haps[,rep(inreg, each=2),drop=FALSE]
                   ids.reg <- ids[inreg]
                   hapfile <-
                       write.garrett.haplotype.and.id.files(haps.reg, ids.reg, pos=leg$pos,
@@ -1756,6 +1858,7 @@ unique(unlist(o))
   recipients <- popcodes[c(UKregions, "Ireland")]
   donors <- popcodes[pops[! pops %in% c("UK","Ireland")]]
   cat(recipients, file=g.recipientfile(), sep="\n")
+
   cat(donors, file=g.donorfile(), sep="\n")
 
   write.donorlist <- function(recipient, donors, n, ndonors) {
@@ -1770,6 +1873,7 @@ unique(unlist(o))
       write.donorlist(recip, donors, tab[c(donors,recip)], ndonors)
 
 
+
 #+end_src
 
 #+results:
@@ -1780,7 +1884,7 @@ unique(unlist(o))
 : 1: closing unused connection 3 (cut -d ' ' -f 2 < impute2/Poland/out/22/all.hen)
 : 2: closing unused connection 4 (cut -d ' ' -f 6- < impute2/Poland/out/22/all.hen)
 
-** email
+******* email
 #+begin_example
 From: Garrett Hellenthal <ghellenthal@gmail.com>
 Subject: Re: this week
@@ -1905,65 +2009,7 @@ On Fri, Jun 18, 2010 at 11:04 AM, Dan Davison <davison@stats.ox.ac.uk>wrote:
 
 [4. application/octet-stream; BasqueCondOnEurope.recomrates]...
 #+end_example
-* STARTED Copying Analysis
-** Explanatory email from Garrett
-From: Garrett Hellenthal <ghellenthal@gmail.com>
-Subject: Re: UK-Europe haplotypes
-Date: Thu, 30 Sep 2010 13:34:17 +0100
-To: Dan Davison <davison@stats.ox.ac.uk>
-
-Hi Dan -
-
-Maybe you can take a preliminary look at the results for chrom 22, as
-they're finished? All of these results are based on doing 10 E-M runs to
-estimate N_e. (Typically we then average this across chromos and re-run with
-fixed N_e to get final proportions and samples.)
-
-For the donors, I've estimated proportions for which they copy from each
-other (and themselves) using a "leave-one-out" approach, where, e.g., a SWE
-ind copies with equal a-priori prob from any of the 49 inds from each of the
-other donor pops plus the other 49 inds of their own pop. (We leave-one-out
-so that every donor ind copies from the exact same number of inds from every
-donor pop including itself.)
-
-For the recipients, I've estimated proportions from which they copy from the
-donors (using 50 inds/donor-pop), as well as generated 10 samples from the
-PAC model for each haplotype. Note these are all "raw" proportions, based
-directly on the PAC model output.
-
-The files for the donors are at
-"/data/oak/user/hellenth/POBIdan/ChromoPainterOUTPUT/LeaveOneOutNeResults/"
-The files for the recipients are at
-"/data/oak/user/hellenth/POBIdan/ChromoPainterOUTPUT/PaintingSamples/"
-
-Most of the output is described in the brief write-up I gave you; I think
-you'll be mostly interested in the ".chunkcounts.out" files and the
-".samples.out" files for now. If you divide each row of ".chunkcounts.out"
-by its sum, this gives you the estimated proportion of copying from each
-donor. The ".samples.out" files give, for each recipient haplotype, 10
-samples from the PAC model. Each row under a haplotype header is a sample
-for that recipient hap (as ordered in the files you gave me). The first
-column gives the sample number (1...10) and each subsequent column gives the
-sampled donor haplotype at each snp. Donor haplotypes are labeled as ordered
-in the phase-style input files. For all files, labels "1"-"100" are BEL,
-"101"-"200" are DEN, "201"-"300" are FRA, etc...
-
-Another thing you may need is in
-"/data/oak/user/hellenth/POBIdan/ChromoPainterOUTPUT/" -- the ".recomrates"
-files give the positions corresponding to the locations in the "samples.out"
-files (this is different than the whole chromo 22 recom-rates file you gave
-me, as I first remove monomorphic snps, which may differ per each pop
-analyzed).
-
-Let me know if you have permission troubles as well, etc.
-Garrett
-
-** Questions
-*** Should I be using *.regionchunkcounts.out for copying proportions?
-*** What's the num.regions column in *.regionchunkcounts.out?
-*** No difference between pops in *prop.out files
-*** Why self lower than others in *prop.out files?
-** Donor proportions
+****** Donor proportions
 #+begin_src R
   x <- chromopainter.read.donor.copy.counts(cpdir)
   stopifnot(names(x) %in% pops)
@@ -1982,14 +2028,14 @@ Garrett
 
   mpx <- sapply(px, colMeans)
 #+end_src
-*** Image plot
+******* Image plot
 #+begin_src R
   image(mpx, xaxt="n", yaxt="n")
   for(ax in 1:2)
       axis(ax, labels=filepops, at=seq(0, 1, length=npops))
 #+end_src
 
-*** PCA plot
+******* PCA plot
     PCA of pairwise mean copying proportions between donor countries.
 #+begin_src R :file pca.png :results replace file
 pc <- prcomp(mpx[-7,-7]) ## Get rid of Poland
@@ -2001,8 +2047,7 @@ text(pos, labels=rownames(pos))
 
 #+results:
 [[file:/home/dan/Work/Papers/PoBI/bench/pca.png]]
-
-** Recipient proportions
+****** Recipient proportions
 #+begin_src R
   x <- chromopainter.read.recipient.chunk.counts(cpdir)
   stopifnot(names(x) %in% pops)
@@ -2012,19 +2057,19 @@ text(pos, labels=rownames(pos))
   mpx <- sapply(px, colMeans)
 #+end_src
 
-** Recipient chunk Lengths
+****** Recipient chunk Lengths
 #+begin_src R
   s <- chromopainter.read.recipient.chunk.lengths(cpdir)
   stopifnot(names(s) %in% pops)
   s <- lapply(s, as.matrix)
   ms <- sapply(s, colMeans)
 #+end_src
-*** Analysis
-    :PROPERTIES:
-    :results:  output replace
-    :END:
+******* Analysis
+       	:PROPERTIES:
+       	:results:  output replace
+       	:END:
 
-**** Scandinavian countries have longest mean chunk lengths
+******** Scandinavian countries have longest mean chunk lengths
 #+begin_src R
   round(sort(rowMeans(ms)), 1)
 #+end_src
@@ -2033,7 +2078,7 @@ text(pos, labels=rownames(pos))
 :  ITA  POL  SPA  FRA  GER  BEL  DEN  SWE  NOR
 : 14.4 15.2 15.4 16.7 17.5 17.6 18.5 18.8 19.4
 
-**** But ORK is middle in order of NOR chunk lengths
+******** But ORK is middle in order of NOR chunk lengths
 #+begin_src R
 round(sort(ms["NOR",]), 1)
 #+end_src
@@ -2042,7 +2087,7 @@ round(sort(ms["NOR",]), 1)
 :  IRE  SPE  HAM  WOR  CHE  COR  NEA  NWA  LEI  SUS  LAN  NFK  DOR  FOD  LIN  UNK  KEN  ORK  HER  DEV  NHA  CUM  DER  OXF  YOR  GLO  NOT  BNB  SUF  NPE  ANB  NIR
 : 18.5 18.8 19.0 19.0 19.0 19.1 19.1 19.1 19.2 19.2 19.3 19.3 19.3 19.3 19.4 19.4 19.4 19.4 19.5 19.5 19.5 19.5 19.5 19.6 19.6 19.6 19.7 19.8 19.8 19.9 20.5 20.6
 
-**** What about if Scandinavian countries are lumped?
+******** What about if Scandinavian countries are lumped?
 #+begin_src R
 SCA <- c("DEN","SWE","NOR")
 round(sort(colMeans(ms[SCA,])), 1)
@@ -2052,15 +2097,10 @@ round(sort(colMeans(ms[SCA,])), 1)
 :
 :  IRE  COR  NWA  NEA  FOD  LEI  NFK  HAM  DOR  KEN  NPE  YOR  WOR  SUF  ORK  DEV  HER  GLO  SPE  CUM  NOT  BNB  OXF  UNK  NHA  LIN  ANB  LAN  SUS  CHE  NIR  DER
 : 18.0 18.6 18.6 18.7 18.7 18.7 18.8 18.8 18.8 18.8 18.9 18.9 18.9 18.9 18.9 18.9 18.9 18.9 18.9 19.0 19.0 19.0 19.0 19.0 19.0 19.0 19.1 19.1 19.1 19.2 19.5 19.6
-
-* PCA
-#+begin_src sh
-  cd data/POBI+MS
-  python ~/src/wtccc2/wtccc2-analyse/wtccc2-analyse.py \
-      --pca --platform illumina \
-      --cohorts 'MS POBI' --exclude ../MS/exclusions.all \
-      --outfile MS-POBI-pca-
-#+end_src
+***** Haploid unsupervised model?
+      Post-process to look at geographic origin of chomosomes in
+      individuals?
+***** Haplogroups
 
 * Synchronise
 #+begin_src sh :results output
